--- a/css/app.css
+++ b/css/app.css
@@ -150,7 +150,7 @@ body {
 
 
 
-[data-clickable="true"]:hover {
+[data-isShown="true"]:hover {
     /* background-color: #ade8f4; */
     background-color: #48cae4;
 }
@@ -187,10 +187,10 @@ td {
 }
 
 [data-status="number"] {
-    font-size: 2.2em;
+    /* font-size: 2.2em;
     font-weight: 800;
     outline: 1px white;
-    color: #EF476F;
+    color: #EF476F; */
 }
 
 [data-status="number"].even {
@@ -344,6 +344,7 @@ small {
 }
 
 .side-title {
+    padding: 2px;
     color: #1e6091
 }
 
@@ -353,10 +354,7 @@ small {
     flex-direction: row;
 }
 
-#hints-title {
-    margin-top: 40px;
-    margin-bottom: 0;
-}
+
 
 .level-list {
     text-decoration: none;
@@ -415,4 +413,29 @@ small {
     text-decoration: none;
 
 
+}
+
+
+
+
+
+
+[data-isShown="false"]{
+    z-index: 0;
+}
+
+
+
+[data-isShown="true"].even{
+    background-color: #d9ed92;
+ }
+[data-isShown="true"].odd{
+    background-color: #b5e48c;
+ }
+
+ [data-isShown="true"]{
+    font-size: 2.2em;
+    font-weight: 800;
+    outline: 1px white;
+    color: #EF476F;
 }
